fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   font-size: 1.3rem !important;
 }
 
-.active {
+nav .active {
   color: #f0bd61 !important;
 }
 
